--- a/pruebas_menu_forms/menu1.html
+++ b/pruebas_menu_forms/menu1.html
@@ -8,7 +8,7 @@
 		
 	<nav>
 <ul>
-    <li><a title="Opcion 1" href="../crud/mostrar.php" target="tablas">Opción 1</a></li>
+    <li><a title="Opcion 1" href="../abm_usuario/mostrar.php" target="tablas">Opción 1</a></li>
     <li><a title="Opcion 2" href="tabla3.php" target="tablas">Opción 2</a></li>
     <li><a title="Opcion 3" href="tabla2.html" target="tablas">Opción 3</a></li>
     <li><a title="Opcion 4" href="form1.html" target="tablas">Opción 4</a></li>
@@ -16,7 +16,7 @@
 </ul>
 </nav>
 
-<iframe src="tabla.html" width="750" height="500" frameborder="0" name="tablas"></iframe>
+<iframe  width="750" height="500" frameborder="0" name="tablas"></iframe>
 
 
 	</body> 
